# Remitwise-Contracts

./: .gitignore  Cargo.toml  PR_312.md  README.md  SCHEDULE_GAS_BENCHMARKS_SUMMARY.md  TEST_EXECUTION_GUIDE.md  THREAT_MODEL.md  UPGRADE_GUIDE.md  VERSION_COMPATIBILITY.md  commit_changes.sh  fix_lib.py  gas_results.json  test_admin_implementation.rs  test_output_simulation.md  validate_admin_security.sh
benchmarks/: README.md  baseline.json  thresholds.json
bill_payments/: Cargo.toml  README.md
bill_payments/src/: lib.rs  test.rs
bill_payments/tests/: stress_tests.rs
data_migration/src/: lib.rs
docs/: family-wallet-design.md
emergency_killswitch/: Cargo.toml
emergency_killswitch/src/: lib.rs
emergency_killswitch/tests/: test_killswitch.rs
family_wallet/: Cargo.toml
family_wallet/docs/: family-wallet-design.md
family_wallet/src/: lib.rs  test.rs
insurance/: Cargo.toml  README.md
insurance/src/: lib.rs  test.rs
integration_tests/: Cargo.toml  README.md
integration_tests/tests/: multi_contract_integration.rs
orchestrator/: Cargo.toml
orchestrator/src/: lib.rs  test.rs
remittance_split/: Cargo.toml  README.md
remittance_split/src/: lib.rs  test.rs
remittance_split/test_snapshots/: fuzz_calculate_split_small_amounts.1.json  fuzz_calculate_split_sum_preservation.1.json  fuzz_calculate_split_sum_preservation.10.json  fuzz_calculate_split_sum_preservation.2.json  fuzz_calculate_split_sum_preservation.3.json  fuzz_calculate_split_sum_preservation.4.json  fuzz_calculate_split_sum_preservation.5.json  fuzz_calculate_split_sum_preservation.6.json  fuzz_calculate_split_sum_preservation.7.json  fuzz_calculate_split_sum_preservation.8.json  fuzz_calculate_split_sum_preservation.9.json  fuzz_invalid_amounts.1.json  fuzz_invalid_percentages.1.json  fuzz_invalid_percentages.2.json  fuzz_invalid_percentages.3.json  fuzz_invalid_percentages.4.json  fuzz_invalid_percentages.5.json  fuzz_large_amounts.1.json  fuzz_rounding_behavior.1.json  fuzz_rounding_behavior.2.json  fuzz_rounding_behavior.3.json  fuzz_rounding_behavior.4.json  fuzz_rounding_behavior.5.json  fuzz_single_category_splits.1.json  fuzz_single_category_splits.2.json  fuzz_single_category_splits.3.json  fuzz_single_category_splits.4.json  test_calculate_split_near_max_safe_value.1.json  test_calculate_split_with_large_amount.1.json  test_calculate_split_with_minimal_percentages.1.json  test_checked_arithmetic_prevents_silent_overflow.1.json  test_edge_case_i128_max_divided_by_100.1.json  test_get_split_allocations_with_large_amount.1.json  test_insurance_remainder_calculation_with_large_values.1.json  test_multiple_splits_with_large_amounts.1.json  test_rounding_behavior_with_large_amounts.1.json  test_sequential_large_calculations.1.json  (+1 more)
remitwise-common/: Cargo.toml
reporting/: Cargo.toml  README.md
reporting/src/: lib.rs  tests.rs
savings_goals/: Cargo.toml  README.md
scenarios/: Cargo.toml
testutils/: Cargo.toml
(+99 files in other folders)
