[package]
name = "remitwise-contracts"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "remittance_split",
    "savings_goals",
    "bill_payments",
    "insurance",
    "family_wallet",
    "data_migration",
    "reporting",
    "orchestrator",
    "cli",
    "scenarios",

    "testutils",
    "integration_tests",

   
]
default-members = [
    "remittance_split",
    "savings_goals",
    "bill_payments",
    "insurance",
    "family_wallet",
    "data_migration",
    "reporting",
    "orchestrator",

]
resolver = "2"

[dependencies]
soroban-sdk = "21.0.0"
ed25519-dalek = "2.1.1"
remittance_split = { path = "./remittance_split" }
savings_goals = { path = "./savings_goals" }
bill_payments = { path = "./bill_payments" }
insurance = { path = "./insurance" }
family_wallet = { path = "./family_wallet" }
reporting = { path = "./reporting" }
orchestrator = { path = "./orchestrator" }

[dev-dependencies]
soroban-sdk = { version = "=21.7.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
