[package]
name = "scenarios"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { version = "=21.7.7", features = ["testutils"] }
testutils = { path = "../testutils" }
remittance_split = { path = "../remittance_split" }
savings_goals = { path = "../savings_goals" }
bill_payments = { path = "../bill_payments" }
insurance = { path = "../insurance" }
family_wallet = { path = "../family_wallet" }
reporting = { path = "../reporting" }
